--- a/src/pages/extra-pages/tags.css
+++ b/src/pages/extra-pages/tags.css
@@ -24,7 +24,9 @@
     display: inline-block;
   }
   .ReactTags__tagInput input.ReactTags__tagInputField,
-  .ReactTags__tagInput input.ReactTags__tagInputField:focus {
+  .ReactTags__tagInput input.ReactTags__tagInputField:focus,
+  .ReactTags__tagInput input.ReactTags__tagInputField:focus-visible,
+  .ReactTags__tagInput input.ReactTags__tagInputField:active {
     height: 40px;
     margin: 0;
     border-radius: 5px !important;
@@ -32,6 +34,7 @@
     font-size: 12px;
     border: 1px solid #ccc;
     min-width: 180px;
+    outline: none;
   }
   
   .ReactTags__editInput {
@@ -50,7 +53,7 @@
     font-size: 12px;
     display: inline-block;
     padding: 8px;
-    margin: 0 5px;
+    margin-right: 5px;
     border-radius: 5px;
   }
   .ReactTags__selected a.ReactTags__remove {
